Add refresh animation

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <button id="add-button">+</button>
             </div>
         </div>
-        <div class="trackers">
+        <div class="trackers" id="trackers-block">
             <ul id="trackers-list">
             </ul>
         </div>
